Add scss purple_shiny

--- a/app/assets/stylesheets/partials/global.scss
+++ b/app/assets/stylesheets/partials/global.scss
@@ -27,3 +27,7 @@
   margin-top: 0.34em !important;
   margin-bottom: 0.34em !important;
 }
+
+.purple_shiny {
+  box-shadow: 5px 5px 20px -2px #A333C8 !important;
+}
