--- a/app/views/domains/new.html.haml
+++ b/app/views/domains/new.html.haml
@@ -1,7 +1,7 @@
 %div.ui.middle.aligned.centered.grid.container{style: 'height: 70%;'}
   %div.row
     %div.six.wide.column
-      %div.ui.segment{ style: 'box-shadow: 5px 5px 20px -2px #A333C8 ; padding-bottom: 20px'}
+      %div.ui.segment.purple_shiny{ style: ' padding-bottom: 20px'}
         %img.ui.centered.small.image{src: '/assets/basic_logo.png'}
         %div.ui.centered.form.header{data: {controller: 'new-domain'}}
           %h1.ui.icon.header
