--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
 %div.ui.middle.aligned.centered.grid.container{style: 'height: 70%;'}
   %div.row
     %div.four.wide.column
-      %div.ui.segment{ style: 'box-shadow: 5px 5px 10px -6px #A333C8 ; padding: 0px'}
+      %div.ui.segment.purple_shiny{ style: 'padding: 0px'}
         %div.ui.fluid.card
           %div.image
             %img{src: '/assets/portmaster.png'}
