Add scss global class ss

--- a/app/assets/stylesheets/partials/global.scss
+++ b/app/assets/stylesheets/partials/global.scss
@@ -31,3 +31,9 @@
 .purple_shiny {
   box-shadow: 5px 5px 20px -2px #A333C8 !important;
 }
+
+/*standard size*/
+  .ss {
+    height: 1em;
+    font-size: 1em;
+  }
