--- a/app/views/apps/index.html.haml
+++ b/app/views/apps/index.html.haml
@@ -1,4 +1,4 @@
-%div.ui.middle.aligned.centered.container{style: 'cursor: pointer; margin-bottom: 10rem;'}
+%div.ui.middle.aligned.centered.container{style: 'cursor: pointer;'}
   %h1
     All Apps:
     = link_to 'New App', new_app_path, class: 'ui basic purple right floated massive button'
