--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -20,7 +20,7 @@
             %div.twelve.wide.column
               %div.bar.float.right
                 %div.ui.purple.small.progress{style: "background: white;"}
-                  %div.bar{style: "width: #{stamp.percentage}%; z-index: 10; "}
+                  %div.bar.second-bar{style: "width: #{stamp.percentage}%"}
                     %div.progress
                       = stamp.percentage
                       \%
@@ -40,7 +40,7 @@
             %div.twelve.wide.column
               %div.bar.float.right
                 %div.ui.teal.small.progress{style: "background: white;"}
-                  %div.bar{style: "width: #{sibling.percentage}%; z-index: 10; "}
+                  %div.bar.second-bar{style: "width: #{sibling.percentage}%"}
                     %div.progress
                       = sibling.percentage
                       \%
