--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,7 +5,7 @@
         %th
           Name
         %th
-          %img{src: '/assets/stamp_j3rik0_no_text_icon.png', style: 'height: 1rem;'}
+          %img.ss{src: '/assets/stamp_j3rik0_no_text_icon.png'}
         %th
           %i.sort.icon
         %th
