--- a/app/views/semantic/_footer.html.haml
+++ b/app/views/semantic/_footer.html.haml
@@ -8,7 +8,7 @@
           = link_to 'All Apps', apps_path, class: 'item'
     .ui.two.wide.column
       %a{class: 'item img_item', href: '/'}
-        %img.footer_stamp_img{src: '/assets/basic_logo.png'}
+        %img{src: '/assets/basic_logo.png'}
     .ui.seven.wide.column
       - if user_signed_in?
         .ui.list
