--- a/app/assets/stylesheets/partials/global.scss
+++ b/app/assets/stylesheets/partials/global.scss
@@ -33,7 +33,12 @@
 }
 
 /*standard size*/
-  .ss {
-    height: 1em;
-    font-size: 1em;
-  }
+.ss {
+  height: 1em;
+  font-size: 1em;
+}
+
+.selected {
+  background: #A333C833 !important;
+  color: #A333C8 !important;
+}
