--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,5 +1,5 @@
 = render 'partials/errors', object: @comment
-= form_for [@commentable, @comment], html: { class: 'ui reply form' } do |f|
+= form_for [@commentable, @comment], url: stamp_comments_path(@commentable), html: { class: 'ui reply form' } do |f|
   %div.ui.fluid.action.input
     = f.text_field :content
     = f.button 'Add Comment', class: 'ui purple basic button'
