Add battle me button for flag stamp

--- a/app/views/stamps/flags/partials/_flag_stamp.html.haml
+++ b/app/views/stamps/flags/partials/_flag_stamp.html.haml
@@ -57,9 +57,14 @@
           %div.ui.bottom.left.attached.label{style: 'padding: 4px;'}
             = link_to flag_stamp_path(stamp), class: 'ui basic purple button', style: 'margin: 0;' do
               Show Stamp
-        -if operating_system
+        - elsif stamp.state == "accepted"
+          %div.ui.bottom.left.attached.label{style: 'padding: 4px;'}
+            = link_to new_flag_stamp_path(app_id: stamp.app.id), class: 'ui basic purple button', style: 'margin: 0;' do
+              Battle Me
+        - if operating_system
           %div.ui.bottom.right.attached.label{style: 'padding: 5px;'}
             = render 'apps/partials/icons', app: @stamp.app
+
 
 :javascript
   $('.info.circle.icon.link')
