Fix merge error

--- a/app/views/stamps/flags/partials/_flag_stamp.html.haml
+++ b/app/views/stamps/flags/partials/_flag_stamp.html.haml
@@ -63,7 +63,7 @@
               Battle Me
         - if operating_system
           %div.ui.bottom.right.attached.label{style: 'padding: 4px;'}
-            = render 'apps/partials/icons', app: @stamp.app
+            = render 'apps/partials/icons', app: stamp.app
 
 
 :javascript
