Add App#href helper

--- a/app/views/stamps/flags/new.html.haml
+++ b/app/views/stamps/flags/new.html.haml
@@ -2,7 +2,7 @@
   %h1
     Flag Stamp for
     = @stamp.app.name
-    = link_to @stamp.app.link do
+    = link_to @stamp.app.href do
       %i.purple.external.icon
 
   %div.ui.segment.new-flag-segment
