--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -1,85 +1,86 @@
-%div.ui.two.column.grid.container
-  %div.sixteen.wide.column
-    %h1.header
-      = @domain.name
-      %a{href: @domain.href}
-        %i.purple.external.icon
-      %div.ui.divider{style: "margin-bottom: -5px;"}
-  %div.ten.wide.column
-    - if @domain.stamps.accepted.exists?
-      %div.ui.basic.segment
-        %h3
-          Accepted
-          %div.ui.divider
-        %div.ui.grid
-          - @domain.stamps.accepted.each do |stamp|
-            %div.four.wide.column
-              =link_to label_stamp_path(stamp.id) do
-                %h5.ui.middle.aligned.header
-                  = stamp.label.name
-            %div.twelve.wide.column
-              %div.bar.float.right
-                %div.ui.purple.small.progress{style: "background: white;"}
-                  %div.bar.second-bar{style: "width: #{stamp.percentage}%"}
-                    %div.progress
-                      = stamp.percentage
-                      \%
-                %div.ui.teal.small.progress{style: "background: white;"}
-                  %div.bar.bartwo{style: "width: 49%; margin-top: -39px;"}
-    - if @domain.stamps.in_progress.exists?
-      %div.ui.basic.segment
-        %h3
-          Suggested
-          %div.ui.divider
-        %div.ui.grid
-          - @domain.stamps.in_progress.each do |sibling|
-            %div.four.wide.column
-              =link_to label_stamp_path(sibling.id) do
-                %h5.ui.middle.aligned.header
-                  = sibling.label.name
-            %div.twelve.wide.column
-              %div.bar.float.right
-                %div.ui.teal.small.progress{style: "background: white;"}
-                  %div.bar.second-bar{style: "width: #{sibling.percentage}%"}
-                    %div.progress
-                      = sibling.percentage
-                      \%
-    - if user_signed_in?
-      %div.ui.basic.segment
-        = link_to new_label_stamp_path(domain_name: @domain.name) do
-          %button.ui.purple.basic.big.button
-            Add Stamp
-  %div.five.wide.right.floated.column
+- content_for :container_class, 'two column grid'
+
+%div.sixteen.wide.column
+  %h1.header
+    = @domain.name
+    %a{href: @domain.href}
+      %i.purple.external.icon
+    %div.ui.divider{style: "margin-bottom: -5px;"}
+%div.ten.wide.column
+  - if @domain.stamps.accepted.exists?
+    %div.ui.basic.segment
+      %h3
+        Accepted
+        %div.ui.divider
+      %div.ui.grid
+        - @domain.stamps.accepted.each do |stamp|
+          %div.four.wide.column
+            =link_to label_stamp_path(stamp.id) do
+              %h5.ui.middle.aligned.header
+                = stamp.label.name
+          %div.twelve.wide.column
+            %div.bar.float.right
+              %div.ui.purple.small.progress{style: "background: white;"}
+                %div.bar.second-bar{style: "width: #{stamp.percentage}%"}
+                  %div.progress
+                    = stamp.percentage
+                    \%
+              %div.ui.teal.small.progress{style: "background: white;"}
+                %div.bar.bartwo{style: "width: 49%; margin-top: -39px;"}
+  - if @domain.stamps.in_progress.exists?
+    %div.ui.basic.segment
+      %h3
+        Suggested
+        %div.ui.divider
+      %div.ui.grid
+        - @domain.stamps.in_progress.each do |sibling|
+          %div.four.wide.column
+            =link_to label_stamp_path(sibling.id) do
+              %h5.ui.middle.aligned.header
+                = sibling.label.name
+          %div.twelve.wide.column
+            %div.bar.float.right
+              %div.ui.teal.small.progress{style: "background: white;"}
+                %div.bar.second-bar{style: "width: #{sibling.percentage}%"}
+                  %div.progress
+                    = sibling.percentage
+                    \%
+  - if user_signed_in?
+    %div.ui.basic.segment
+      = link_to new_label_stamp_path(domain_name: @domain.name) do
+        %button.ui.purple.basic.big.button
+          Add Stamp
+%div.five.wide.right.floated.column
+  %div.ui.basic.segment
+    %div.ui.relaxed.list
+      %div.item
+        %i.user.icon
+        %div.content
+          = link_to user_path(@domain.user_id) do
+            = @domain.user.username
+      %div.item
+        %i.clock.outline.icon
+        %div.content
+          = time_ago_in_words(@domain.created_at)
+          ago
+      %div.item
+        %i.history.icon
+        %div.content
+          = time_ago_in_words(@domain.updated_at)
+          ago
+      %div.ui.divider{style: "margin-bottom: -23px;"}
+  - if @domain.children.exists?
     %div.ui.basic.segment
       %div.ui.relaxed.list
-        %div.item
-          %i.user.icon
-          %div.content
-            = link_to user_path(@domain.user_id) do
-              = @domain.user.username
-        %div.item
-          %i.clock.outline.icon
-          %div.content
-            = time_ago_in_words(@domain.created_at)
-            ago
-        %div.item
-          %i.history.icon
-          %div.content
-            = time_ago_in_words(@domain.updated_at)
-            ago
-        %div.ui.divider{style: "margin-bottom: -23px;"}
-    - if @domain.children.exists?
-      %div.ui.basic.segment
-        %div.ui.relaxed.list
-          %h3.ui.header
-            Subdomains
-          - @domain.children.each do |subdomain|
-            %div.item
-              = link_to subdomain.name, domain_path(subdomain.name)
-    - if @domain.parent.present?
-      %div.ui.basic.segment
-        %div.ui.relaxed.list
-          %h3.ui.header
-            Main Domain
+        %h3.ui.header
+          Subdomains
+        - @domain.children.each do |subdomain|
           %div.item
-            = link_to @domain.parent.name, domain_path(@domain.parent.name)
+            = link_to subdomain.name, domain_path(subdomain.name)
+  - if @domain.parent.present?
+    %div.ui.basic.segment
+      %div.ui.relaxed.list
+        %h3.ui.header
+          Main Domain
+        %div.item
+          = link_to @domain.parent.name, domain_path(@domain.parent.name)
