--- a/app/views/semantic/_header.html.haml
+++ b/app/views/semantic/_header.html.haml
@@ -4,6 +4,7 @@
     %h2{type: 'text'}
       Stamp
   - if user_signed_in?
+    = link_to 'Recents', label_stamp_index_path, class: 'item'
     = link_to 'All Domains', domains_path, class: 'item'
     = link_to 'All Apps', apps_path, class: 'item'
   .menu
