--- a/app/views/guides/partials/_example_users.html.haml
+++ b/app/views/guides/partials/_example_users.html.haml
@@ -1,19 +1,19 @@
-.ui.two.cards
+.ui.three.cards
   .card
     .content
       .ui.image
-        = image_tag 'guides/pc_principle.png'
+        = image_tag 'guides/lorde.png'
       .ui.small.header
-        PC Principle
+        Randy Marsh
       .ui.list
         .item
           %i.icon
             REP
           .content
-            %b 31
+            %b 1
         .item
           %i.large.icon
-            %b 2
+            %b 1
           .content
             Voting Power
         .item
@@ -27,7 +27,32 @@
   .card
     .content
       .ui.image
-        = image_tag 'guides/strong_woman.jpg'
+        = image_tag 'guides/pc_principle.png'
+      .ui.small.header
+        PC Principle
+      .ui.list
+        .item
+          %i.icon
+            REP
+          .content
+            %b 90
+        .item
+          %i.large.icon
+            %b 2
+          .content
+            Voting Power
+        .item
+          %i.checkmark.green.icon
+          .content
+            Label Stamp
+        .item
+          %i.checkmark.green.icon
+          .content
+            Flag Stamp
+  .card
+    .content
+      .ui.image
+        = image_tag 'guides/strong_woman.png'
       .ui.small.header
         Strong Woman
       .ui.list
@@ -35,10 +60,10 @@
           %i.icon
             REP
           .content
-            %b 2,621
+            %b 103
         .item
           %i.large.icon
-            %b 4
+            %b 3
           .content
             Voting Power
         .item
