Improve Stamp tour

--- a/app/views/guides/partials/_example_stamp.html.haml
+++ b/app/views/guides/partials/_example_stamp.html.haml
@@ -3,7 +3,7 @@
     Stamp for
     %a{href: '#'}adservice.google.com
   .ui.divider
-  %span.ui.grid.centered.middle.aligned
+  %span.ui.centered.middle.aligned.grid
     .three.wide.column
       %h4 Ads
     .ten.wide.column{style: 'padding-top: 30px;'}
@@ -16,10 +16,10 @@
     .three.wide.column
       .ui.icon.vertical.buttons
         %button.ui.button.icon{style: "padding: 0px; background-color: white;"}
-          %i.caret.fitted.hand.huge.icon.up
+          %i.fitted.huge.grey.caret.up.icon
         %button.ui.button.icon{style: "padding: 0px; background-color: white;"}
-          %i.caret.fitted.flipped.grey.hand.huge.icon.up.vertically
-  .ui.large.top.right.attached.label.purple
+          %i.fitted.vertically.flipped.huge.grey.caret.up.icon
+  .ui.large.top.right.attached.purple.label
     In Progress
   .ui.small.comments
     %h3.ui.dividing.header
@@ -28,7 +28,7 @@
         = image_tag 'portmaster.png'
       .content
         %a.author{href: '#'}
-          Joe Stamp
+          Portmaster
         .metadata
           .date
             about 3 hours ago
