--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,5 +5,6 @@
 @import 'partials/variables';
 
 @import 'partials/global';
+@import 'partials/guides';
 @import 'partials/stamps';
 @import 'partials/layout';
