Move javascript to Fomantic

--- a/app/views/stamps/labels/new.html.haml
+++ b/app/views/stamps/labels/new.html.haml
@@ -37,7 +37,7 @@
       %div.content
         %div.ui.grid
           %div.fourteen.wide.column
-            %div.ui.purple.range#stamp_percentage_range
+            %div.ui.purple.slider#stamp_percentage_slider
           %div.two.wide.column
             %span#stamp_percentage_display
         %h3
