Sort guide images per guide

--- a/app/views/guides/partials/_example_users.html.haml
+++ b/app/views/guides/partials/_example_users.html.haml
@@ -2,7 +2,7 @@
   .card
     .content
       .ui.image
-        = image_tag 'guides/lorde.png'
+        = image_tag 'guides/tour/lorde.png'
       .ui.small.header
         Randy Marsh
       .ui.list
@@ -27,7 +27,7 @@
   .card
     .content
       .ui.image
-        = image_tag 'guides/pc_principle.png'
+        = image_tag 'guides/tour/pc_principle.png'
       .ui.small.header
         PC Principle
       .ui.list
@@ -52,7 +52,7 @@
   .card
     .content
       .ui.image
-        = image_tag 'guides/strong_woman.png'
+        = image_tag 'guides/tour/strong_woman.png'
       .ui.small.header
         Strong Woman
       .ui.list
