Disable empty links in tour

--- a/app/views/guides/partials/_example_conclusion.html.haml
+++ b/app/views/guides/partials/_example_conclusion.html.haml
@@ -3,7 +3,8 @@
     .ui.segment
       %h3.header
         Stamp for
-        %a{href: '#'}adservice.google.com
+        %a.disabled
+          adservice.google.com
       .ui.divider
       .ui.centered.grid
         .row
