--- a/app/assets/stylesheets/partials/guides.scss
+++ b/app/assets/stylesheets/partials/guides.scss
@@ -59,5 +59,30 @@
       border-left: 1px solid rgba(34, 36, 38, 0.15);
     }
   }
+}
 
+#label-stamps-guide {
+  .row {
+    padding: 7% 0;
+  }
+
+  .ui.tag.label {
+    margin: 0.2em 0 0.2em 1em;
+  }
+
+  .big.ribbon {
+    margin-bottom: 0.5em;
+  }
+
+  i.hand.pointer {
+    margin: 1em 0 0 -2em;
+  }
+
+  #creation.row > .column {
+    margin-top: 1.5em;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
