--- a/app/views/guides/label_stamps.html.haml
+++ b/app/views/guides/label_stamps.html.haml
@@ -136,5 +136,5 @@
       If you want to contribute it is
       %i highly
       advised to use tools such as
-      = link_to 'uMatrix.', 'https://github.com/gorhill/uMatrix', target: '_blank'
+      = link_to 'uMatrix.', umatrix_path, target: '_blank'
       It shows 3rd-party requests of a domain, as shown in the above screenshot.
