Improve uMatrix screenshot

--- a/app/views/guides/label_stamps.html.haml
+++ b/app/views/guides/label_stamps.html.haml
@@ -117,7 +117,7 @@
         %a.disabled carbonads.com
         should be stamped as
         = render partial: 'labels/partials/label_link', locals: { label: @ad_label }
-  .eight.wide.center.aligned.column
+  .eight.wide.center.middle.aligned.column
     = image_tag 'guides/label_stamps/umatrix-semantic-ui.png', class: 'ui bordered image'
 
 
